force-app/main/default/objects/Execution_Schedule__c/Execution_Schedule__c.object-meta.xml
<CustomObject>
    <description>Schedule configuration for a journey execution</description>
    <label>Execution Schedule</label>
    <nameField>
        <displayFormat>SCHED-{0000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>