force-app/main/default/objects/Execution_Schedule__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <description>Custom cron expression for advanced scheduling</description>
    <label>Cron Expression</label>
    <length>120</length>
    <type>Text</type>
</CustomField>