force-app/main/default/objects/Execution_Schedule__c/fields/Journey_Execution__c.field-meta.xml
<CustomField>
    <fullName>Journey_Execution__c</fullName>
    <label>Journey Execution</label>
    <referenceTo>Journey_Execution__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>