force-app/main/default/objects/Execution_Schedule__c/fields/Selected_Days__c.field-meta.xml
<CustomField>
    <fullName>Selected_Days__c</fullName>
    <description>Comma-separated day indices for weekly frequency (0=Mon, 6=Sun)</description>
    <label>Selected Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>